# PokeAI

./: .gitignore  PokemonRed.gb.state  README.md  agentwrap.py  baseline_fast_v3.py  clean_pufferl.py  config.conf  config.yaml  coordfinder.py  cudacheck.py  demo.py  env.py  livegraph.py  observation_copy.npy  pdubsrun.py  pkltest.py  player_coordinates.csv  pyproject.toml  ram_map.py  readoutest.py  requirements.txt  run_agent.py  run_pretrained_interactive.py  run_stats.csv  runcode.py  sb3_neural_network  stream.py  tester.py  train_agent.py  train_agent_lstm.py  train_agent_norestart.py  vis.py
env/: __init__.py  data.py  env.py
extras/: PokemonRed.gb.ram  heatmap.py  startold.state  train_agent_norestart.py
helpers/: calc_reward.py  memory_helper.py  stream.py
obsolete/: train_agent.py
pokemon_red/: __init__.py  environment.py  torch.py
rom/: PokemonRed.sav
states/: PokemonRed.gb.state  PokemonRedstart.gb.state
